--- a/examples/PolygonOverlay2.html
+++ b/examples/PolygonOverlay2.html
@@ -24,7 +24,7 @@
         font-size: 14px;
     }
     </style>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <script src="https://smartdata.b0.upaiyun.com/thinkmark/inmap_grey.min.js"></script>
 </head>
 
