静态文件迁移

--- a/examples/PointOverlay01.html
+++ b/examples/PointOverlay01.html
@@ -155,7 +155,7 @@
     </style>
     <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <script src="data/data3.js"></script>
-    <script src="https://smartdata.b0.upaiyun.com/thinkmark/inmap_grey.min.js"></script>
+    <script src="http://www.wulihub.com.cn/go/JPVkkW/inmap_grey.min.js"></script>
 </head>
 
 <body>
