--- a/examples/PointOverlay02.html
+++ b/examples/PointOverlay02.html
@@ -91,7 +91,7 @@
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <script src="data/data3.js"></script>
     <script src="data/data4.js"></script>
-    <script src="https://smartdata.b0.upaiyun.com/thinkmark/inmap_grey.min.js"></script>
+    <script src="http://www.wulihub.com.cn/go/JPVkkW/inmap_grey.min.js"></script>
 </head>
 
 <body>
@@ -148,9 +148,9 @@ function createDotOverlay() {
 function createImgOverlay(type) {
     let img = new Image();
     if (type === 1) {
-        img.src = icon = 'https://smartdata.b0.upaiyun.com/thinkmark/dot_mine.png';
+        img.src = icon = 'http://www.wulihub.com.cn/go/JPVkkW/dot_mine.png';
     } else {
-        img.src = icon = 'https://smartdata.b0.upaiyun.com/thinkmark/dot_pc.png';
+        img.src = icon = 'http://www.wulihub.com.cn/go/JPVkkW/dot_pc.png';
     }
     var overlay = new inMap.ImgOverlay({
         tooltip: {
