--- a/examples/pieOverlay.html
+++ b/examples/pieOverlay.html
@@ -38,8 +38,8 @@
     <script src="data/myshop.js"></script>
     <script src="data/paichi.js"></script>
     <script src="data/zengyi.js"></script>
-    <script src="https://smartdata.b0.upaiyun.com/thinkmark/inmap_grey.min.js"></script>
-    <script src="https://smartdata.b0.upaiyun.com/thinkmark/markerClusterer.js"></script>
+    <script src="hhttp://www.wulihub.com.cn/go/JPVkkW/inmap_grey.min.js"></script>
+    <script src="hhttp://www.wulihub.com.cn/go/JPVkkW/markerClusterer.js"></script>
 </head>
 
 <body>
