--- a/examples/ImgOverlay-formatter.html
+++ b/examples/ImgOverlay-formatter.html
@@ -323,7 +323,7 @@
     <script src="data/data3.js"></script>
     <script src="data/data4.js"></script>
     <script src="data/data5.js"></script>
-    <script src="https://smartdata.b0.upaiyun.com/thinkmark/inmap_grey.min.js"></script>
+   /inmap_grey.min.js"></script>
 </head>
 
 <body>
@@ -508,12 +508,12 @@ function createDotOverlay() {
 function createImgOverlay(type) {
     let img = new Image();
     if (type === 1) {
-        img.src = icon = 'https://smartdata.b0.upaiyun.com/thinkmark/dot_mine.png';
+        img.src = icon = 'http://www.wulihub.com.cn/go/JPVkkW/dot_mine.png';
     } else {
-        img.src = icon = 'https://smartdata.b0.upaiyun.com/thinkmark/dot_pc.png';
+        img.src = icon = 'http://www.wulihub.com.cn/go/JPVkkW/dot_pc.png';
     }
     let hoverImg = new Image();
-    hoverImg.src = icon = 'https://smartdata.b0.upaiyun.com/thinkmark/dot_hover.png';
+    hoverImg.src = icon = 'http://www.wulihub.com.cn/go/JPVkkW/dot_hover.png';
 
     let overlay = new inMap.ImgOverlay({
         tooltip: {
