--- a/examples/PointOverlay.html
+++ b/examples/PointOverlay.html
@@ -26,7 +26,7 @@
     </style>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <script src="data/data.js"></script>
-    <script src="https://smartdata.b0.upaiyun.com/thinkmark/inmap_grey.min.js"></script>
+    <script src="http://www.wulihub.com.cn/go/JPVkkW/inmap_grey.min.js"></script>
 </head>
 
 <body>
