--- a/examples/pieOverlay01.html
+++ b/examples/pieOverlay01.html
@@ -35,7 +35,7 @@
     .mapJuHe .list span {}
     </style>
     <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
-    <script src="https://smartdata.b0.upaiyun.com/thinkmark/inmap_grey.min.js"></script>
+    <script src="http://www.wulihub.com.cn/go/JPVkkW/inmap_grey.min.js"></script>
 </head>
 
 <body>
