--- a/examples/PointOverlay.html
+++ b/examples/PointOverlay.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>PointOverlay</title>
+    <title>PointOverlayay</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
@@ -23,14 +23,24 @@
             margin-left: 5px;
             font-size: 14px;
         }
+        .tool {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 100;
+        }
     </style>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <script src="data/data.js"></script>
-    <script src="http://www.wulihub.com.cn/go/JPVkkW/inmap_grey.min.js"></script>
+    <script src="../dist/inmap.js"></script>
 </head>
 
 <body>
     <div id="allmap"></div>
+    <div class='tool'>
+        <button onclick='show()'>open</button>
+        <button onclick='hide()'>close</button>
+    </div>
 </body>
 
 </html>
@@ -48,7 +58,7 @@
     })
 
 
-    var overlay = new inMap.PointOverlay({
+    var overlay = new inMap.SSPointOverlay({
         tooltip: {
             show: true,
             // formatter: "{count}",
@@ -113,14 +123,22 @@
         }),
         event: {
             onState(state) {
-                console.log(state);
+                // console.log(state);
             },
             // multiSelect: true,
             onMouseClick: function (item, event) {
-                console.log(item);
+                // console.log(item);
                 //能获取当前点的信息
             }
         }
     });
     inmap.add(overlay);
+
+    function show(){
+        overlay.show();
+    }
+
+    function hide(){
+        overlay.hide();
+    }
 </script>
