--- a/examples/ImgOverlay-formatter.html
+++ b/examples/ImgOverlay-formatter.html
@@ -186,14 +186,14 @@
         background: #fff;
     }
     </style>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <script src="https://lib.baomitu.com/vue/2.5.17/vue.min.js"></script>
     <script src="https://unpkg.com/iview@2.14.3/dist/iview.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/iview@2.14.3/dist/styles/iview.css">
     <script src="data/data3.js"></script>
     <script src="data/data4.js"></script>
     <script src="data/data5.js"></script>
-    <script src="../dist/inmap.js"></script>
+    <script src="../dist/inmap.min.js"></script>
     <!-- <script type="text/javascript" src="http://unpkg.com/inmap/dist/inmap.min.js"></script> -->
     <!-- <script src="https://smartdata.b0.upaiyun.com/thinkmark/inmap_g_v2.min.js"></script> -->
 </head>
