--- a/examples/PointOverlay01.html
+++ b/examples/PointOverlay01.html
@@ -24,9 +24,9 @@
         font-size: 14px;
     }
     </style>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <script src="data/data3.js"></script>
-    <script src="../dist/inmap.js"></script>
+    <script src="../dist/inmap.min.js"></script>
     <!-- <script src="https://smartdata.b0.upaiyun.com/thinkmark/inmap.min1.js"></script> -->
 </head>
 
@@ -109,8 +109,8 @@ inmap.add(overlay);
 
 function changeName() {
     console.log(config);
-    let a = Object.assign(config,{
-        name:'adf'
+    let a = Object.assign(config, {
+        name: 'adf'
     })
     console.log(a);
     overlay.setOptionStyle(a);
