--- a/examples/PolygonOverlay-tooltip.html
+++ b/examples/PolygonOverlay-tooltip.html
@@ -136,12 +136,12 @@
         bottom: 30px;
     }
     </style>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <!-- <script src="./data/geojson.js"></script> -->
     <script src="data/data3.js"></script>
     <script src="data/data4.js"></script>
     <script src="data/data5.js"></script>
-    <script src="../dist/inmap.js"></script>
+    <script src="../dist/inmap.min.js"></script>
 </head>
 
 <body>
