--- a/examples/RectOverlay02.html
+++ b/examples/RectOverlay02.html
@@ -30,11 +30,11 @@
         z-index: 100;
     }
     </style>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <script src="./data/data6.js"></script>
     <!-- <script src="./data/data7.js"></script> -->
     <!-- <script src="./data/tuijiandata.js"></script> -->
-    <script src="../dist/inmap.js"></script>
+    <script src="../dist/inmap.min.js"></script>
 </head>
 
 <body>
