--- a/examples/index.html
+++ b/examples/index.html
@@ -9,9 +9,6 @@
 
 <body>
     <p>
-        <a href="./RectOverlay.html">智选-RectOverlay</a>
-    </p>
-    <p>
         <a href="./ImgOverlay-formatter.html">智选-ImgOverlay-formatter</a>
     </p>
     <p>
@@ -21,10 +18,25 @@
         <a href="./PointOverlay02.html">智选-PointOverlay02</a>
     </p>
     <p>
+        <a href="./CircleOverlay.html">智选-circleOverlay</a>
+    </p>
+    <p>
+        <a href="./PolygonOverlay-tooltip.html">智选-PolygonOverlay-tooltip</a>
+    </p>
+    <p>
+        <a href="./PolygonOverlay2.html">智选-PolygonOverlay2</a>
+    </p>
+    <p>
+        <a href="./RectOverlay.html">智选-RectOverlay</a>
+    </p>
+    <p>
+        <a href="./RectOverlay02.html">智选-RectOverlay02</a>
+    </p>
+    <p>
         <a href="./pieOverlay.html">智选-pieOverlay</a>
     </p>
     <p>
-        <a href="./pieOverlay.html">智选-聚合</a>
+        <a href="./pieOverlay01.html">智选-pieOverlay01</a>
     </p>
 </body>
 
