--- a/examples/PointOverlay02.html
+++ b/examples/PointOverlay02.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>PointOverlayay</title>
+    <title>PointOverlay</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
@@ -88,10 +88,10 @@
         margin-bottom: 10px;*/
     }
     </style>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <script src="data/data3.js"></script>
     <script src="data/data4.js"></script>
-    <script src="../dist/inmap.js"></script>
+    <script src="../dist/inmap.min.js"></script>
     <!-- <script type="text/javascript" src="http://unpkg.com/inmap/dist/inmap.min.js"></script> -->
     <!-- <script src="https://smartdata.b0.upaiyun.com/thinkmark/inmap_g_v2.min.js"></script> -->
 </head>
