--- a/examples/PolygonOverlay2.html
+++ b/examples/PolygonOverlay2.html
@@ -26,7 +26,7 @@
     </style>
     <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <!-- <script src="./data/geojson.js"></script> -->
-    <script src="../dist/inmap.js"></script>
+    <script src="../dist/inmap.min.js"></script>
 </head>
 
 <body>
