--- a/examples/pieOverlay.html
+++ b/examples/pieOverlay.html
@@ -34,12 +34,12 @@
     }
     .mapJuHe .list span {}
     </style>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=U3q69k0Dv0GCYNiiZeHPf7BS"></script>
     <script src="data/district.js"></script>
     <script src="data/myshop.js"></script>
     <script src="data/paichi.js"></script>
     <script src="data/zengyi.js"></script>
-    <script src="../dist/inmap.js"></script>
+    <script src="../dist/inmap.min.js"></script>
     <script src="https://cdn.bootcss.com/axios/0.19.0-beta.1/axios.js"></script>
 </head>
 
