--- a/examples/ImgOverlay-formatter.html
+++ b/examples/ImgOverlay-formatter.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>PointOverlayay</title>
+    <title>ImgOverlayay</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
@@ -202,10 +202,10 @@
     <div id="app">
         <div id="allmap"></div>
         <div style="position: absolute;right:0;top:0" class="my-button">
-            <button onclick="showR()">显示黄色新数据</button>
             <button onclick="showYellow()">显示黄色</button>
             <button onclick="hideYellow()">隐藏黄色</button>
             <button onclick="showTip()">显示tooltip</button>
+            <button onclick="hideTip()">隐藏tooltip</button>
         </div>
         <div id="zengyi"></div>
         <Modal v-model="showModal" width="262" :closable="false" :mask-closable="false" title="编辑研究区域" id="editCanvas" ref="editCanvas" class-name="selfModal editModal">
@@ -336,47 +336,6 @@ function editOverlay() {
     vm.showModal = true;
 }
 
-function createDotOverlay() {
-    let list = data.data.storeList;
-    // console.log('Dot类',list)
-    // list.map((item,index)=>{
-    //     if(item.address && item.address.indexOf('小屯路')>-1){
-    //     console.log(index)
-
-    //     }
-    // })
-    // console.log(list[325])
-    let overlay = new inMap.SSPointOverlay({
-        name: '散点',
-        tooltip: {
-            show: false,
-            customClass: 'point',
-            // formatter: function(params, dom) {
-            //     console.log(params)
-            // },
-        },
-        style: {
-            normal: {
-                backgroundColor: 'rgba(129, 186, 246, 0.10)',
-                borderColor: 'rgba(45, 140, 240, 0.60)',
-                borderWidth: 1,
-                unit: 'm',
-                size: 500
-            }
-        },
-        event: {
-            onState: (state) => {
-                if (state == 3) {}
-            }
-        },
-        selected: [list[325]],
-    });
-    //去掉点击事件
-    overlay._tMouseClick = null;
-    overlay.type = 1;
-    inmap.add(overlay);
-    return overlay;
-}
 let s = 'http://www.wulihub.com.cn/go/JPVkkW/';
 
 function createImgOverlay(type) {
@@ -487,40 +446,27 @@ function createImgOverlay(type) {
 
 
 function showYellow() {
-    let list = map.getOverlays();
-    list.map(overlay => {
-        if (overlay.type === 4) {
-            overlay.show();
-            overlay.element.show();
-            overlay.setTooltipIsShow(true);
-        }
-    });
+    imgoverlay.show();
+    imgoverlay.setTooltipIsShow(true);
 }
 
 
 function hideYellow() {
-    let list = map.getOverlays();
-    list.map(overlay => {
-        if (overlay.type === 4) {
-            overlay.hide();
-            overlay.element.hide();
-            overlay.setTooltipIsShow(false);
-        }
-    });
+    imgoverlay.hide();
+    imgoverlay.setTooltipIsShow(false);
 }
 
 function showTip() {
-    let list = map.getOverlays();
-    list.map(overlay => {
-        if (overlay.type === 3) {
-            overlay.setTooltipIsShow(true);
-        }
-    });
+    myshopOverlay.setTooltipIsShow(true);
+    imgoverlay.setTooltipIsShow(true);
 }
 
+function hideTip() {
+    myshopOverlay.setTooltipIsShow(false);
+    imgoverlay.setTooltipIsShow(false);
+}
 
-let dotoverlay1,
-    imgoverlay1;
+let myshopOverlay;
 
 function myShop() {
     //我的门店
@@ -532,22 +478,17 @@ function myShop() {
             'coordinates': [String(item.lng), String(item.lat)]
         };
     });
-    dotoverlay1 = createDotOverlay();
-    dotoverlay1.setData(points1);
-    dotoverlay1.setZIndex(600);
 
-    imgoverlay1 = createImgOverlay(1);
-    imgoverlay1.type = 3;
-    imgoverlay1.element = dotoverlay1;
-    imgoverlay1.setData(points1);
-    imgoverlay1.setZIndex(699);
+    myshopOverlay = createImgOverlay(1);
+    myshopOverlay.type = 3;
+    myshopOverlay.setData(points1);
+    myshopOverlay.setZIndex(699);
     // console.log('overlay is ', overlay)
     // console.log('map is ', this.inmap)
 }
 myShop();
 
-let dotoverlay,
-    imgoverlay;
+let imgoverlay;
 //排斥点
 function paichi(data) {
     let points2 = data;
@@ -571,70 +512,14 @@ function paichi(data) {
     zengyi.innerHTML = str;
     // console.log(allData, dotoverlay, imgoverlay);
     if (imgoverlay === undefined) {
-        dotoverlay = createDotOverlay();
-        dotoverlay.setData(allData);
-        dotoverlay.setZIndex(600);
-
         imgoverlay = createImgOverlay();
         imgoverlay.type = 4;
         imgoverlay.setData(allData);
         imgoverlay.setZIndex(699);
-
-        imgoverlay.element = dotoverlay;
     } else {
         imgoverlay.setData(allData);
-        imgoverlay.element.setData(allData);
-    }
-
-    // imgoverlay.hide();
-    // imgoverlay.element.hide();
-    // imgoverlay.setTooltipIsShow(false);
-}
-// paichi(list.data)
-
-/*画圆*/
-const drawOption = {
-    fillColor: '#FF0000',
-    fillOpacity: 0.1,
-    strokeStyle: 'solid',
-    strokeColor: '#FF0000',
-    strokeWeight: 1,
-    enableClicking: true
-};
-
-function drawLngLat(lng, lat) {
-    return new BMap.Point(lng, lat);
-}
-
-function drawCircle(point, radius) {
-    let opts = {};
-
-    opts.fillColor = drawOption.fillColor;
-    opts.fillOpacity = drawOption.fillOpacity;
-    opts.strokeStyle = drawOption.strokeStyle;
-    opts.strokeColor = drawOption.strokeColor;
-    opts.strokeWeight = drawOption.strokeWeight;
-    opts.enableClicking = drawOption.enableClicking;
-
-
-    return new BMap.Circle(point, radius, opts);
-}
-let point = drawLngLat('116.475959000000003', '39.9216699999999989');
-let circle = drawCircle(point, 500);
-inmap.add(circle);
-
-
-function showR() {
-    removeYellow(imgoverlay);
-    imgoverlay = undefined;
-    paichi(listnew.data);
-}
-//删除黄色点
-function removeYellow(overlay) {
-    if (overlay) {
-        overlay.setTooltipIsShow(false);
-        inmap.remove(overlay.element);
-        inmap.remove(overlay);
     }
 }
+paichi(list.data)
+
 </script>
