--- a/examples/PolygonOverlay2.html
+++ b/examples/PolygonOverlay2.html
@@ -31,9 +31,9 @@
 
 <body>
     <div id="allmap"></div>
-    <div style="position:absolute;right:0;top:0;width:200px;height: 200px;background: #c0c0c0">
+    <!-- <div style="position:absolute;right:0;top:0;width:200px;height: 200px;background: #c0c0c0">
         <div>dsfsdfsfsdfasdf</div>
-    </div>
+    </div> -->
 </body>
 
 </html>
